welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:5: error: '(' expected but identifier found.
    if a<0 {
       ^posNeg:12: error: illegal start of simple expression
  }
  ^